updated to match marco's buildout template

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,12 +4,14 @@ extends =
 
 parts = coverage test report report-xml
 
+eggs =
+    avrc.data.store [test]
+
 develop = .
 
 [test]
 recipe = collective.xmltestreport
-eggs =
-    avrc.data.store [test]
+eggs = ${buildout:eggs}
 defaults = ['--auto-color', '--auto-progress']
 
 [coverage]
