--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,25 +1,88 @@
+################################################################################
+# Project buildout for isolated development and testing
+# ------------------------------------------------------------------------------
+#
+# Pro Tip: If you are working on multiple projects, you can save some time by 
+# using a home directory ".buildout" directory that specifies a "default.cfg"
+# file. That way all your downloads are cached.
+#
+# Example: ~/.buildout/default.cfg
+#
+# [buildout]
+# executable = /opt/python26/bin/python
+# eggs-directory = /home/USERNAME/.buildout/eggs
+# download-cache = /home/USERNAME/.buildout/downloads
+# extends-cache = /home/USERNAME/.buildout/extends
+#
+#[omelette]
+# location = /home/USERNAME/.buildout/omelette
+################################################################################
+
+#
+# Custom section to quickly specify project eggs that should be tested
+#
+[settings]
+test-packages =
+   hive.roster [test]
+    
+#    
+# mr.developer egg sources for in-house eggs
+#
+[sources]
+
+################################################################################
+# Below are is the actual buildout settings that don't need to be changed often.
+#
+# Beyond here there be dragons!
+#
 [buildout]
+
+# Use library pins that will be used in production servers (plone, theming, fti)
 extends =
     http://dist.plone.org/release/4.1/versions.cfg
+    http://good-py.appspot.com/release/plone.app.theming/1.0b8?plone=4.1
+    http://good-py.appspot.com/release/dexterity/1.0.3-1?plone=4.1
 
-parts = coverage test report report-xml
+extensions = mr.developer buildout.dumppickedversions
 
-eggs =
-    hive.roster [test]
+parts = coverage test omelette report report-xml
 
+# Set to the current path of the egg being developed
 develop = .
 
+# Locations of third-party eggs
+find-links = 
+    http://dist.plone.org
+    http://pypi.python.org
+    http://effbot.org/downloads
+    http://dist.repoze.org/PIL-1.1.6.tar.gz
 
-########################################################
-## Default testing environment
-##
-##
-########################################################
+# mr.developer settings
+sources-dir = ./parts/eggs
+sources = sources
+auto-checkout = *
+
+
+#
+# Dependencies flattening for easy file system traversal
+#
+[omelette]                                                                       
+recipe = collective.recipe.omelette                                              
+eggs = ${settings:test-packages}
+
+                
+#        
+# Test runner
+#
 [test]
 recipe = collective.xmltestreport
-eggs = ${buildout:eggs}
+eggs = ${settings:test-packages}
 defaults = ['--auto-color', '--auto-progress']
 
+
+#
+# Test coverage
+#
 [coverage]
 recipe = zc.recipe.egg
 eggs = coverage
@@ -27,6 +90,10 @@ initialization =
     include = '--source=${buildout:directory}/src'
     sys.argv = sys.argv[:] + ['run', include, 'bin/test', '--all', '--xml']
 
+
+#
+# Test coverage reporting (in HTML)
+#
 [report]
 recipe = zc.recipe.egg
 eggs = coverage
@@ -34,9 +101,20 @@ scripts = coverage=report
 initialization =
     sys.argv = sys.argv[:] + ['html', '-i']
 
+
+#
+# Test coverage reporting (in XML)
+#
 [report-xml]
 recipe = zc.recipe.egg
 eggs = coverage
 scripts = coverage=report-xml
 initialization =
     sys.argv = sys.argv[:] + ['xml', '-i']
+
+
+#
+# Third-party egg version pins
+#
+[versions]
+mr.developer = 1.18
