Added sqlite setup handler functionality (for testing)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -45,7 +45,7 @@ extends =
 
 extensions = mr.developer buildout.dumppickedversions
 
-parts = coverage test omelette report report-xml
+parts = coverage test omelette report report-xml zopepy
 
 # Set to the current path of the egg being developed
 develop = .
@@ -111,6 +111,16 @@ eggs = coverage
 scripts = coverage=report-xml
 initialization =
     sys.argv = sys.argv[:] + ['xml', '-i']
+
+
+#
+# Python interpreter that contains packages for command-line testing
+#
+[zopepy]                                                                                                                                                                                                                                   
+recipe = zc.recipe.egg                                                           
+eggs = ${settings:test-packages}                                                          
+interpreter = zopepy                                                             
+scripts = zopepy     
 
 
 #
