--- a/buildout.cfg
+++ b/buildout.cfg
@@ -45,7 +45,7 @@ extends =
 
 extensions = mr.developer buildout.dumppickedversions
 
-parts = coverage test omelette report report-xml
+parts = coverage test omelette report report-xml zopepy
 
 # Set to the current path of the egg being developed
 develop = .
@@ -66,11 +66,11 @@ auto-checkout = *
 #
 # Dependencies flattening for easy file system traversal
 #
-[omelette]                                                                       
-recipe = collective.recipe.omelette                                              
+[omelette]
+recipe = collective.recipe.omelette
 eggs = ${settings:test-packages}
 
-                
+
 #        
 # Test runner
 #
@@ -112,6 +112,15 @@ scripts = coverage=report-xml
 initialization =
     sys.argv = sys.argv[:] + ['xml', '-i']
 
+
+#
+# Python interpreter that contains packages for command-line testing
+#
+[zopepy]
+recipe = zc.recipe.egg
+eggs = ${settings:test-packages}
+interpreter = zopepy
+scripts = zopepy
 
 #
 # Third-party egg version pins
