Changes accepted with some modifications

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,34 +1,21 @@
+################################################################################
+# Project Buildout Settings
+################################################################################
+
+#
+# Extend the master environment file
+#
 [buildout]
-extends =
-    http://dist.plone.org/release/4.1/versions.cfg
+extends = https://raw.github.com/beastcore/project.buildout/master/environment.cfg
 
-parts = coverage test report report-xml
-
-develop = .
-
-[test]
-recipe = collective.xmltestreport
-eggs =
-    avrc.data.store [test]
-defaults = ['--auto-color', '--auto-progress']
-
-[coverage]
-recipe = zc.recipe.egg
-eggs = coverage
-initialization =
-    include = '--source=${buildout:directory}/src'
-    sys.argv = sys.argv[:] + ['run', include, 'bin/test', '--all', '--xml']
-
-[report]
-recipe = zc.recipe.egg
-eggs = coverage
-scripts = coverage=report
-initialization =
-    sys.argv = sys.argv[:] + ['html', '-i']
-
-[report-xml]
-recipe = zc.recipe.egg
-eggs = coverage
-scripts = coverage=report-xml
-initialization =
-    sys.argv = sys.argv[:] + ['xml', '-i']
+#
+# Specify eggs to be tested as part of the project
+#
+[settings]
+test-packages =
+    avrc.data.store [postgresql,test]
+    
+#    
+# mr.developer egg sources for in-house eggs
+#
+[sources]
