Uses beast.traverser

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,3 +20,4 @@ test-packages =
 #
 [sources]
 avrc.data.store = git git@github.com:beastcore/avrc.data.store.git branch=master
+beast.traverser = git git@github.com:beastcore/beast.traverser.git branch=master
