--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,9 +13,10 @@ extends = https://raw.github.com/beastcore/project.buildout/master/environment.c
 #
 [settings]
 test-packages =
-   occams.form [postgresql,test]
-    
-#    
+    Pillow
+    occams.form [postgresql,test]
+
+#
 # mr.developer egg sources for in-house eggs
 #
 [sources]
