Data commit now checks for actual setting changes before versioning existing data

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,3 +21,4 @@ test-packages =
 #
 [sources]
 avrc.data.store = git git@github.com:beastcore/avrc.data.store.git branch=master
+collective.z3cform.datagridfield = git git@github.com:beastcore/collective.z3cform.datagridfield branch=master
