--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,8 +14,12 @@ extends = https://raw.github.com/beastcore/project.buildout/master/environment.c
 [settings]
 test-packages =
    avrc.data.store [postgresql,test]
-    
-#    
+
+#
 # mr.developer egg sources for in-house eggs
 #
 [sources]
+
+
+[versions]
+SQLAlchemy = 0.7.5
