--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,7 +13,7 @@ extends = https://raw.github.com/beastcore/project.buildout/master/environment.c
 #
 [settings]
 test-packages =
-   avrc.data.store [postgresql,test]
+   occams.datastore [postgresql,test]
 
 #
 # mr.developer egg sources for in-house eggs
