--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,9 @@
 [buildout]
 extends = https://raw.github.com/beastcore/project.buildout/master/environment.cfg
 
+parts +=
+    alembic
+
 #
 # Specify eggs to be tested as part of the project
 #
@@ -21,5 +24,13 @@ test-packages =
 [sources]
 
 
+[alembic]
+recipe = zc.recipe.egg
+# Only generate the migrate entry point
+scripts = alembic
+eggs = alembic
+
+
 [versions]
-SQLAlchemy = 0.7.5
+SQLAlchemy = 0.7.6
+alembic = 0.2.1
