All sections work. Permissions added to forms and buttons. Looks like we are good to go.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,8 +16,11 @@ test-packages =
     Pillow
     occams.form [postgresql,test]
 
+[versions]
+SQLAlchemy = 0.7.6
 #
 # mr.developer egg sources for in-house eggs
 #
 [sources]
-avrc.data.store = git git@github.com:beastcore/avrc.data.store.git branch=master
+#avrc.data.store = git git@github.com:beastcore/avrc.data.store.git branch=master
+occams.datastore = fs occams.datastore
