Upgrade scripts are now file resources outside of the production code

--- a/alembic.ini
+++ b/alembic.ini
@@ -2,8 +2,7 @@
 
 [alembic]
 # path to migration scripts
-# TODO: update this to a package resource once alembic 0.2.2 is released
-script_location = %(here)s/upgrades
+script_location = occams.datastore:upgrades
 
 sqlalchemy.url =
 
