Added more documentation

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,6 +30,7 @@ recipe = zc.recipe.egg
 scripts = alembic
 eggs = alembic
 
+# Override versions without messing up production values
 [versions]
-SQLAlchemy = 0.7.6
+SQLAlchemy = 0.7.7
 alembic = 0.3.1
