Switched back to sqlalchemy-migrate, alembic still has missing features

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,9 +8,6 @@
 [buildout]
 extends = https://raw.github.com/beastcore/project.buildout/master/environment.cfg
 
-parts +=
-    alembic
-
 #
 # Specify eggs to be tested as part of the project
 #
@@ -24,13 +21,7 @@ test-packages =
 [sources]
 
 
-[alembic]
-recipe = zc.recipe.egg
-# Only generate the migrate entry point
-scripts = alembic
-eggs = alembic
-
 # Override versions without messing up production values
 [versions]
 SQLAlchemy = 0.7.7
-alembic = 0.3.1
+sqlalchemy-migrate = 0.7.2
