Checks if description was specified before converting it to string. Fixes #86

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,14 +13,13 @@ extends = https://raw.github.com/beastcore/project.buildout/master/environment.c
 #
 [settings]
 test-packages =
-    Pillow
     occams.form [postgresql,test]
 
 [versions]
-SQLAlchemy = 0.7.6
+SQLAlchemy = 0.7.8
 #
 # mr.developer egg sources for in-house eggs
 #
 [sources]
-#avrc.data.store = git git@github.com:beastcore/avrc.data.store.git branch=master
-occams.datastore = fs occams.datastore
+occams.datastore = git git@github.com:beastcore/occams.datastore.git branch=master
+
