--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,9 +13,9 @@ extends = https://raw.github.com/beastcore/project.buildout/master/environment.c
 #
 [settings]
 test-packages =
-   hive.roster [postgresql,test]
-    
-#    
+   occams.roster [postgresql,test]
+
+#
 # mr.developer egg sources for in-house eggs
 #
 [sources]
