--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,5 +21,5 @@ SQLAlchemy = 0.7.8
 # mr.developer egg sources for in-house eggs
 #
 [sources]
-occams.datastore = fs occams.datastore
+occams.datastore = git git@bitbucket.org:ucsdbitcore/occams.datastore.git branch=master
 
