Switching platform to Pyramid

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,25 +1,22 @@
-################################################################################
-# Project Buildout Settings
-################################################################################
-
-#
-# Extend the master environment file
-#
 [buildout]
-extends = https://raw.github.com/beastcore/project.buildout/master/environment.cfg
+parts = pyramid
+develop =
+  .
+  /home/mmartinez/git/occams.form/res/occams.datastore
+versions = versions
 
-#
-# Specify eggs to be tested as part of the project
-#
-[settings]
-test-packages =
-    occams.form [postgresql,test]
+[pyramid]
+recipe = zc.recipe.egg
+dependent-scripts = true
+eggs =
+  pyramid
+  occams.form[postgresql,test]
+interpreter = py
 
 [versions]
-SQLAlchemy = 0.7.8
-#
-# mr.developer egg sources for in-house eggs
-#
-[sources]
-occams.datastore = git git@bitbucket.org:ucsdbitcore/occams.datastore.git branch=master
+zc.recipe.egg = 1.3.2
+SQLAlchemy = 0.8.1
+pyramid = 1.4
+deform = 0.9.7
+colander = 1.0a2
 
