--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,11 @@
 [buildout]
+extends =
+  http://good-py.appspot.com/release/dexterity/1.2.1?plone=4.1
 parts = pyramid
+; todo, might be time to start looking at mr.developer
 develop =
   .
-  /home/mmartinez/git/occams.form/res/occams.datastore
+  ../occams.datastore
 versions = versions
 
 [pyramid]
@@ -15,8 +18,14 @@ interpreter = py
 
 [versions]
 zc.recipe.egg = 1.3.2
-SQLAlchemy = 0.8.1
+SQLAlchemy = 0.8.0
 pyramid = 1.4
 deform = 0.9.7
 colander = 1.0a2
+
+; Need this to get plone packages to install
+zc.buildout = 1.5.0
+PasteDeploy = 1.5.0
+zope.deprecation = 3.5.0
+zope.interface = 3.8.0
 
