OCCAMS-466 #comment Switched to webassets to 'cook' our assets like we did in Plone

--- a/development-sample.ini
+++ b/development-sample.ini
@@ -16,16 +16,15 @@ pyramid.includes =
     pyramid_tm
     pyramid_beaker
     pyramid_deform
+    pyramid_layout
     pyramid_mailer
+    pyramid_webassets
 
+sqlalchemy.url = postgresql://plone:pl0n3@localhost/gamma
 
-sqlalchemy.url = 'postgresql://plone:pl0n3@localhost/gamma
-
-; not sure why this is necessary
-auth.secret = seekr1t
-auth.hashalg = sha512
-; the custom group finder for permissions
-auth.callback =
+webassets.base_dir = %(here)s/src/occams/form/static
+webassets.base_url = /static
+webassets.debug = True
 
 ; By default, the toolbar only appears for clients from IP addresses
 ; '127.0.0.1' and '::1'.
