--- a/src/occams/clinical/assets.yml
+++ b/src/occams/clinical/assets.yml
@@ -1,12 +1,4 @@
-# CSS
-default-css:
-  filters:   less,cssmin
-  output:    gen/default.%(version)s.css
-  depends:   styles/*.less
-  contents:
-    - styles/main.less
-
-# JavaScripts
+### Third-party libraries
 
 jquery-js:
   contents:
@@ -14,20 +6,36 @@ jquery-js:
 
 bootstrap-js:
   contents:
-    - libs/bootstrap/js/affix.js
+    - libs/bootstrap/js/transition.js
+    - libs/bootstrap/js/collapse.js
     - libs/bootstrap/js/button.js
     - libs/bootstrap/js/dropdown.js
     - libs/bootstrap/js/modal.js
     - libs/bootstrap/js/tooltip.js
-    - libs/bootstrap/js/transition.js
 
 socketio-js:
   contents:
     - libs/socket.io-client.js
 
+
+### Project libraries
+
+
 components-js:
   contents:
     - scripts/selectall.js
+    - scripts/tooltip.js
+
+
+### Views
+
+
+views-js:
+  contents:
+    - scripts/export.js
+
+
+### App bundles
 
 default-js:
   filters:   jsmin
@@ -37,4 +45,12 @@ default-js:
     - bootstrap-js
     - socketio-js
     - components-js
+    - views-js
+
+default-css:
+  filters:   less,cssmin
+  output:    gen/default.%(version)s.css
+  depends:   styles/*.less
+  contents:
+    - styles/main.less
 
