--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = %(here)s/alembic
+script_location = occams.clinical:alembic/
 
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
