Updated setup info and added version introspection

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@
 # Extend the master environment file
 #
 [buildout]
-extends = https://raw.github.com/beastcore/project.buildout/master/environment.cfg
+extends = https://bitbucket.org/ucsdbitcore/project.buildout/raw/master/environment.cfg
 
 #
 # Specify eggs to be tested as part of the project
@@ -15,8 +15,6 @@ extends = https://raw.github.com/beastcore/project.buildout/master/environment.c
 test-packages =
     occams.form [postgresql,test]
 
-[versions]
-SQLAlchemy = 0.7.8
 #
 # mr.developer egg sources for in-house eggs
 #
