--- a/setup.cfg
+++ b/setup.cfg
@@ -1,27 +1,28 @@
 [nosetests]
 match=^test
 nocapture=1
-cover-package=occamsclinical
+cover-package=occams.clinical
 with-coverage=1
 cover-erase=1
+logging-level=DEBUG
 
 [compile_catalog]
-directory = occamsclinical/locale
+directory = occams.clinical/locale
 domain = occams.clinical
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
-output_file = occamsclinical/locale/occams.clinical.pot
+output_file = occams.clinical/locale/occams.clinical.pot
 width = 80
 
 [init_catalog]
 domain = occams.clinical
-input_file = occamsclinical/locale/occams.clinical.pot
-output_dir = occamsclinical/locale
+input_file = occams.clinical/locale/occams.clinical.pot
+output_dir = occams.clinical/locale
 
 [update_catalog]
 domain = occams.clinical
-input_file = occamsclinical/locale/occams.clinical.pot
-output_dir = occamsclinical/locale
+input_file = occams.clinical/locale/occams.clinical.pot
+output_dir = occams.clinical/locale
 previous = true
