--- a/appsample.ini
+++ b/appsample.ini
@@ -6,11 +6,14 @@
 [app:main]
 use = egg:occams.form
 
+; Pyramid debug settings
 pyramid.reload_templates = true
 pyramid.debug_authorization = true
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
+
+; Pyramid plugins
 pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
@@ -20,15 +23,31 @@ pyramid.includes =
     pyramid_mailer
     pyramid_webassets
 
-sqlalchemy.url = postgresql://plone:pl0n3@localhost/gamma
-
-webassets.base_dir = %(here)s/src/occams/form/static
-webassets.base_url = /static
-webassets.debug = True
-
+; Which IP addresses to show the debug toolbar
+; Note: pyramid_debugtoolbar plugin must be enabled
 ; By default, the toolbar only appears for clients from IP addresses
 ; '127.0.0.1' and '::1'.
 debugtoolbar.hosts = 127.0.0.1 ::1
+
+; Database location
+sqlalchemy.url =
+
+; Web asssets
+webassets.base_dir = occams.form:static
+webassets.base_url = /static
+webassets.debug = True
+
+; pyramid_who settings
+; The plugin doesn't actually read these, we forward them upon
+; application startup.
+; http://docs.pylonsproject.org/projects/pyramid_who/en/latest/
+
+; repoze.who configuration (requires it's own file)
+who.config_file = %(here)s/who.ini
+; The plugin to use for remember/forget (i.e. prefered identifier)
+who.identifier_id = auth_tkt
+; (optional) The function to use for searching for group memberships
+;who.callback =
 
 ;;;
 ; wsgi server configuration
