Implemented view fixture

--- a/appsample.ini
+++ b/appsample.ini
@@ -27,50 +27,20 @@ app.exports_expire = 604800
 clinicaldb.url =
 rosterdb.url =
 
-webassets.base_dir = %(here)s/src/occams/clinical/static
+webassets.base_dir =
 webassets.base_url = /static
 webassets.debug = true
 webassets.auto_build = true
 
-; not sure why this is necessary
-auth.secret = seekr1t
-auth.hashalg = sha512
-auth.timeout = 3600
-auth.reissue_time = 120
+who.config_file =
+who.identifier_id =
+who.callback =
 
-ldap.setup.host =
-ldap.setup.bind =
-ldap.setup.passwd =
-ldap.setup.timeout = 360
-
-ldap.user.base_dn =
-ldap.user.filter_tmpl =
-ldap.user.scope =
-ldap.user.userid_attr =
-ldap.user.name_attr =
-
-ldap.group.base_dn =
-ldap.group.scope =
-ldap.group.filter_tmpl =
-ldap.group.cache_period = 600
+apps.config_file =
 
 ; By default, the toolbar only appears for clients from IP addresses
 ; '127.0.0.1' and '::1'.
-debugtoolbar.hosts = 127.0.0.1 ::1 192.168.111.0/24
-
-groups = administrators primary_investigators nurses
-
-group.administrators.dns =
-group.administrators.permissions =
-  ALL_PERMISSIONS
-
-
-group.primary_investigators.dns =
-group.primary_investigators.permissions =
-
-
-group.nurses.dns =
-group.nurses.permissions =
+debugtoolbar.hosts = 127.0.0.1 ::1
 
 
 ;;;
