Completed tests for listing view

--- a/tests/etc/app.ini
+++ b/tests/etc/app.ini
@@ -1,11 +1,12 @@
 ;; Bare-bones configuration for testing
-[app:occams.clinical]
+[app:main]
 use = egg:occams.clinical
 
 pyramid.includes =
   pyramid_beaker
   pyramid_layout
   pyramid_webassets
+  pyramid_tm
 
 clinicaldb.url = sqlite:///
 rosterdb.url = sqlite:///
