Data export views 100% covered

--- a/tests/etc/app.ini
+++ b/tests/etc/app.ini
@@ -8,8 +8,11 @@ pyramid.includes =
   pyramid_webassets
   pyramid_tm
 
+app.export_dir = /tmp
+
 clinicaldb.url = sqlite:///
 rosterdb.url = sqlite:///
+
 
 who.config_file = %(here)s/who.ini
 who.identifier_id =
