Added new tests and fixtures for tasks/views/socketio

--- a/appsample.ini
+++ b/appsample.ini
@@ -23,6 +23,10 @@ pyramid.includes =
 app.site_title = OCCAMS | Clinical
 ; expire exports after a week
 app.exports_expire = 604800
+app.export_dir =
+app.export_limit =
+
+redis.url =
 
 clinicaldb.url =
 rosterdb.url =
