--- a/tests/app.ini
+++ b/tests/app.ini
@@ -1,4 +1,4 @@
-;; Bare-bones configuration for testing
+;; Bare-bones configuration for functional testing
 [app:main]
 use = egg:occams.clinical
 
@@ -13,11 +13,12 @@ app.export_dir = /tmp
 clinicaldb.url = sqlite:///
 rosterdb.url = sqlite:///
 
+redis.url = redis://localhost/9
 
 who.config_file = %(here)s/who.ini
 who.identifier_id =
 
-webassets.base_dir = %(here)s/../../src/occams/clinical/static
+webassets.base_dir = %(here)s/../src/occams/clinical/static
 webassets.base_url = /static
 webassets.debug = False
 
