--- a/tests/who.ini
+++ b/tests/who.ini
@@ -1,5 +1,5 @@
 ;;
-; Bare-bones repoze.who authentication policy for testing
+; Bare-bones repoze.who authentication policy for functional testing
 ;;
 [general]
 request_classifier = repoze.who.classifiers:default_request_classifier
