Fixed locale targets

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,22 +7,22 @@ cover-erase=1
 logging-level=DEBUG
 
 [compile_catalog]
-directory = occams.clinical/locale
+directory = src/occams/clinical/locale
 domain = occams.clinical
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
-output_file = occams.clinical/locale/occams.clinical.pot
+output_file = src/occams/clinical/locale/occams.clinical.pot
 width = 80
 
 [init_catalog]
 domain = occams.clinical
-input_file = occams.clinical/locale/occams.clinical.pot
-output_dir = occams.clinical/locale
+input_file = src/occams/clinical/locale/occams.clinical.pot
+output_dir = src/occams/clinical/locale
 
 [update_catalog]
 domain = occams.clinical
-input_file = occams.clinical/locale/occams.clinical.pot
-output_dir = occams.clinical/locale
+input_file = src/occams/clinical/locale/occams.clinical.pot
+output_dir = src/occams/clinical/locale
 previous = true
