Reconficured for use with REDIS

--- a/appsample.ini
+++ b/appsample.ini
@@ -13,23 +13,28 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
-    pyramid_beaker
+    pyramid_redis_sessions
+    pyramid_chameleon
     pyramid_deform
     pyramid_layout
     pyramid_ldap
     pyramid_mailer
     pyramid_webassets
 
-app.site_title = OCCAMS | Clinical
+app.site.title = OCCAMS | Clinical
 ; expire exports after a week
-app.exports_expire = 604800
-app.export_dir =
-app.export_limit =
+app.exports.expire = 604800
+app.export.dir =
+app.export.limit =
 
-redis.url =
+redis.sessions.secret =
+redis.sessions.url =
+redis.celery.url =
+redis.exports.url =
+redis.stats.url =
 
-clinicaldb.url =
-rosterdb.url =
+sa.clinicaldb.url =
+sa.rosterdb.url =
 
 webassets.base_dir =
 webassets.base_url = /static
