--- a/tests/app.ini
+++ b/tests/app.ini
@@ -8,7 +8,7 @@ pyramid.includes =
   pyramid_webassets
   pyramid_tm
 
-app.export_dir = /tmp
+app.export.dir = /tmp
 
 clinicaldb.url = sqlite:///
 rosterdb.url = sqlite:///
