Cleaned up fixtures

--- a/tests/who.ini
+++ b/tests/who.ini
@@ -3,7 +3,7 @@
 ;;
 [general]
 request_classifier = repoze.who.classifiers:default_request_classifier
-challenge_decider = occams.form.auth:challenge_decider
+challenge_decider = occams.form.security:challenge_decider
 remote_user_key = REMOTE_USER
 
 [challengers]
