Fixed task tests

--- a/tests/app-sqlite.ini
+++ b/tests/app-sqlite.ini
@@ -8,10 +8,12 @@ app.org.title = MY ORGANIZATION
 app.export.dir = /tmp
 app.export.user = celery@localhost
 
-app.db.url = sqlite:///%(here)s/test_clinical.db
+;app.db.url = sqlite:///%(here)s/test_clinical.db
+app.db.url = sqlite://
 
 pid.package = occams.roster
-pid.db.url = sqlite:///%(here)s/test_roster.db
+;pid.db.url = sqlite:///%(here)s/test_roster.db
+pid.db.url = sqlite://
 
 ; redis (regular access)
 redis.url = redis://localhost/9
