Added option to select datbase dialect for tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,6 @@ cover-erase=1
 logging-level=DEBUG
 
 [db]
-;TODO: (mmartinez/2014-03-13) List all supported dialects.
-;      It would be nice to be able to run all tests
-;      for all dialects listed below. Will use
-;      ``default`` for now until we can figure it out...
-; koit would be nice to be able to choose one.
-;default=postgresql://test:t3st@localhost/test
 default=sqlite:///:memory:
-;sqlite=sqlite:///:memory:
-;postgresql=postgresql://test:t3st@localhost/test
+sqlite=sqlite:///:memory:
+postgresql=postgresql://test:t3st@localhost/test
