Ignore export if revoked

--- a/template-development.ini
+++ b/template-development.ini
@@ -118,7 +118,12 @@ redis.sessions.prefix = occams.studies-sessions:
 ;
 
 ; Broker URL [REQUIRED: Use redis]
+; Comununiation between worker and web application
 celery.broker.url =
+
+; Backend URL [REQUIRED: Use redis]
+; Status of jobs will be stored here
+celery.backend.url =
 
 
 ;
