Functional tests working again.

--- a/tests/who.ini
+++ b/tests/who.ini
@@ -3,14 +3,5 @@
 ;;
 [general]
 request_classifier = repoze.who.classifiers:default_request_classifier
-challenge_decider = occams.form.security:challenge_decider
+challenge_decider = pyramid_who.classifiers:forbidden_challenger
 remote_user_key = REMOTE_USER
-
-[challengers]
-plugins =
-  basicauth
-
-[plugin:basicauth]
-; identification and challenge
-use = repoze.who.plugins.basicauth:make_plugin
-realm = 'TESTING'
