--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,8 @@ domain = occams.studies
 input_file = src/occams/studies/locale/occams.studies.pot
 output_dir = src/occams/studies/locale
 previous = true
+
+[db]
+default=sqlite:///:memory:
+sqlite=sqlite:///:memory:
+postgresql=postgresql://test:t3st@localhost/test_studies]
