Updated ini file instructions for webassets

--- a/template-development.ini
+++ b/template-development.ini
@@ -73,12 +73,12 @@ pid.db.url =
 ; https://github.com/sontek/pyramid_webassets#configuration
 ;
 
-; Assets directoy (Do not change)
-webassets.base_dir = %(here)s/../src/occams.studies/src/occams/studies/static
+; Assets directory (This needs
+webassets.base_dir = <PATH>/occams.studies/src/occams/studies/static
 
 ; Web path to the satic files (add beggining slash)
 webassets.base_url = /static
-;webassets.base_url = /studies//static
+;webassets.base_url = /studies/static
 
 ; Enable compression
 webassets.debug = true
