--- a/template-production.ini
+++ b/template-production.ini
@@ -67,8 +67,8 @@ pid.db.url =
 ; https://github.com/sontek/pyramid_webassets#configuration
 ;
 
-; Assets directoy (Do not change)
-webassets.base_dir = %(here)s/../src/occams.studies/src/occams/studies/static
+; Assets directoy
+webassets.base_dir = <PATH>/occams.studies/src/occams/studies/static
 
 ; Web path to the satic files (add beggining slash)
 webassets.base_url = /static
