Tests pass in postgres again

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,4 +30,4 @@ previous = true
 [db]
 default=sqlite:///:memory:
 sqlite=sqlite:///:memory:
-postgresql=postgresql://test:t3st@localhost/test_studies]
+postgresql=postgresql://test:t3st@/test_studies
