Restructured project for pyramid platform

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,8 @@ domain = occams.form
 input_file = occams.form/locale/occams.form.pot
 output_dir = occams.form/locale
 previous = true
+
+[db]
+default=sqlite:///:memory:
+sqlite=sqlite:///:memory:
+postgresql=postgresql://test:t3st@/test_studies
