Able to load field data into draggable/sortable listing for editor

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/occams/forms/static/libs/bootstrap"]
 	path = src/occams/forms/static/libs/bootstrap
 	url = https://github.com/twbs/bootstrap.git
+[submodule "src/occams/forms/static/libs/font-awesome"]
+	path = src/occams/forms/static/libs/font-awesome
+	url = https://github.com/FortAwesome/Font-Awesome.git
