--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/occams/forms/static/libs/font-awesome"]
 	path = src/occams/forms/static/libs/font-awesome
 	url = https://github.com/FortAwesome/Font-Awesome.git
+[submodule "src/occams/forms/static/libs/bootstrap-datetimepicker"]
+	path = src/occams/forms/static/libs/bootstrap-datetimepicker
+	url = https://github.com/Eonasdan/bootstrap-datetimepicker.git
