--- a/bower.json
+++ b/bower.json
@@ -11,10 +11,10 @@
     "knockout-sortable": "~0.9.3",
     "eonasdan-bootstrap-datetimepicker": "~3.1.3",
     "select2": "3.x",
-    "select2-bootstrap-css": "https://github.com/fk/select2-bootstrap-css.git#bootstrap3"
+    "select2-bootstrap-css": "https://github.com/fk/select2-bootstrap-css.git#bootstrap3",
+    "bootstrap-fileinput": "~4.1.5"
   },
   "devDependencies": {
     "mocha": "~2.1.0"
   }
-
 }
