Switched to bower for third-party asset management

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ Session.vim
 *PKG-INFO
 VERSION
 
+##### Node
+npm_modules
+bower_components
+
 ##### Buildout / Unit test / Coverage Reports
 .coverage
 .installed.cfg
