Added instructions for contributors

--- a/who-sample.ini
+++ b/who-sample.ini
@@ -1,9 +1,13 @@
 ;;;
 ; repoze.who v2 configuration
+;
 ; More options at:
 ; http://docs.repoze.org/who/2.0/configuration.html#declarative-configuration
 ;
-; This file is pre-configured for ldap, but you can use whatever v2 plugin
+; This file is pre-configured for ldap, but you can use whatever v2 plugin.
+;
+; The LDAP plugin used is ``who_ldap``:
+; https://github.com/m-martinez/who_ldap
 ;;;
 
 [general]
@@ -12,71 +16,69 @@ challenge_decider = pyramid_who.classifiers:forbidden_challenger
 remote_user_key = REMOTE_USER
 
 [identifiers]
-; plugin_name;classifier_name:.. or just plugin_name (good for any)
 plugins =
   auth_tkt
-  basicauth
 
 [authenticators]
-; plugin_name;classifier_name.. or just plugin_name (good for any)
 plugins =
   auth_tkt
   ldapusers
-
-[challengers]
-; plugin_name;classifier_name:.. or just plugin_name (good for any)
-plugins =
-  basicauth
 
 [mdproviders]
 plugins =
   ldapproperties
   ldapgroups
 
-[plugin:basicauth]
-; identification and challenge
-use = repoze.who.plugins.basicauth:make_plugin
-realm = 'OCCAMS Services'
+[challengers]
+plugins =
+  redirector;browser
+
+[plugin:redirector]
+use = repoze.who.plugins.redirector:make_plugin
+login_url = /accounts/login
+came_from_param = referrer
 
 [plugin:auth_tkt]
 ; identification and authentication
 use = repoze.who.plugins.auth_tkt:make_plugin
-secret = s33kr1t
+secret = AUTH_SPECIFIC_TOKEN
 cookie_name = auth_tkt
+; Switch to true on production systems
 secure = False
-include_ip = False
-;timeout =
-;reissue_time =
-;userid_checker =
+include_ip = True
+; *WARNING* Use the same value as pyramid session timeout
+timeout = 3600
+; Rule of thumb, set to a tenth of the timetout (per pyramid docs)
+reissue_time = 360
 
 [plugin:ldapusers]
 ; authentication
-use = repoze.who.plugins.ldap:LDAPSearchAuthenticatorPlugin
-ldap_connection =
+use = who_ldap:LDAPSearchAuthenticatorPlugin
+url =
 bind_dn =
 bind_pass =
 base_dn =
-naming_attribute = mail
+naming_attribute =
 search_scope = subtree
-returned_id = dn
+returned_id = login
 
 [plugin:ldapproperties]
 ; mdproviders
-name = properties
-use = repoze.who.plugins.ldap:LDAPAttributesPlugin
-ldap_connection =
+use = who_ldap:LDAPAttributesPlugin
+url =
 bind_dn =
 bind_pass =
-attributes =
+name = properties
+attributes = cn=first_name,sn=last_name,mail=email
 flatten = True
 
 [plugin:ldapgroups]
 ; mdproviders
-name = groups
-use = repoze.who.plugins.ldap:LDAPGroupsPlugin
-ldap_connection =
+use = who_ldap:LDAPGroupsPlugin
+url =
 bind_dn =
 bind_pass =
 base_dn =
+name = groups
 filterstr = (&(objectClass=groupOfNames)(member=%%(dn)s))
-naming_attribute = cn
+returned_id = cn
