Configured as OCCAMS application

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,28 +1,28 @@
 [nosetests]
 match=^test
 nocapture=1
-cover-package=occams.accounts
+cover-package=occams_acounts
 with-coverage=1
 cover-erase=1
 logging-level=DEBUG
 
 [compile_catalog]
-directory = src/occams/accounts/locale
-domain = occams.accounts
+directory = src/occams_acounts/locale
+domain = occams_acounts
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
-output_file = src/occams/accounts/locale/occams.accounts.pot
+output_file = src/occams_acounts/locale/occams_acounts.pot
 width = 80
 
 [init_catalog]
-domain = occams.accounts
-input_file = src/occams/accounts/locale/occams.accounts.pot
-output_dir = src/occams/accounts/locale
+domain = occams_acounts
+input_file = src/occams_acounts/locale/occams_acounts.pot
+output_dir = src/occams_acounts/locale
 
 [update_catalog]
-domain = occams.accounts
-input_file = src/occams/accounts/locale/occams.accounts.pot
-output_dir = src/occams/accounts/locale
+domain = occams_acounts
+input_file = src/occams_acounts/locale/occams_acounts.pot
+output_dir = src/occams_acounts/locale
 previous = true
