--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "occams.accounts",
+  "name": "occams_accounts",
   "dependencies": {
     "bootstrap": "3.x",
     "font-awesome": "4.x",
@@ -18,7 +18,7 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "src/occams/accounts/static/bower_components/",
+    "occams_acounts/static/bower_components/",
     "test",
     "tests"
   ]
