--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [nosetests]
 match=^test
 nocapture=1
-cover-package=occams.datastore
+cover-package=occams_datastore
 with-coverage=1
 cover-erase=1
 logging-level=DEBUG
