Configured as OCCAMS application

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,29 +1,29 @@
 [nosetests]
 match=^test
 nocapture=1
-cover-package=occams.forms
+cover-package=occams_forms
 with-coverage=1
 cover-erase=1
 
 [compile_catalog]
-directory = occams.forms/locale
-domain = occams.forms
+directory = occams_forms/locale
+domain = occams_forms
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
-output_file = occams.forms/locale/occams.forms.pot
+output_file = occams_forms/locale/occams_forms.pot
 width = 80
 
 [init_catalog]
-domain = occams.forms
-input_file = occams.forms/locale/occams.forms.pot
-output_dir = occams.forms/locale
+domain = occams_forms
+input_file = occams_forms/locale/occams_forms.pot
+output_dir = occams_forms/locale
 
 [update_catalog]
-domain = occams.forms
-input_file = occams.forms/locale/occams.forms.pot
-output_dir = occams.forms/locale
+domain = occams_forms
+input_file = occams_forms/locale/occams_forms.pot
+output_dir = occams_forms/locale
 previous = true
 
 [db]
