--- a/development-sample.ini
+++ b/development-sample.ini
@@ -104,6 +104,20 @@ studies.celery.backend.url = %(redis.url)s
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; ALEMBIC SETTINGS
+;; It's useful to have the database migrations in a common file for reference.
+;; This configuration might change in the future if we decide to take
+;advantage
+;; of alembic's "multiple version directories" in order to keep database
+;; migrations project-specific.
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[alembic]
+script_location = occams.studies:alembic/
+blame = bitcore@ucsd.edu
+sqlalchemy.url =
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; REPOZE WHO MIDDLEWARE
 ; Common configurations for repoze.who, applications should use this as a
 ; configuration filter (i.e. "filter-with = who")
