--- a/development-sample.ini
+++ b/development-sample.ini
@@ -112,7 +112,7 @@ studies.celery.backend.url = %(redis.url)s
 ;; migrations project-specific.
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [alembic]
-script_location = occams.studies:alembic/
+script_location = occams_studies:alembic/
 blame = bitcore@ucsd.edu
 sqlalchemy.url =
 
