--- a/development.ini
+++ b/development.ini
@@ -28,7 +28,7 @@ pyramid.includes =
 debugtoolbar.hosts = 127.0.0.1 ::1
 
 ; redis (for regular access)
-redis.url =
+redis.url = redis://localhost:6379/0
 
 ; webassets
 ; https://github.com/sontek/pyramid_webassets#configuration
@@ -37,14 +37,14 @@ webassets.debug = true
 
 ; Authentication
 ; http://docs.pylonsproject.org/projects/pyramid_who/en/latest/#configuration-options
-who.config_file =
+who.config_file = %(here)s/who.ini
 who.identifier_id = plugins:auth_tkt
 
 ; Browser sessions
 ; Share redis server while avoiding collisions with a prefix
 ; NOTE: Keep authorization and session secrets separate for security purposes
 ; http://pyramid-redis-sessions.readthedocs.org/en/latest/gettingstarted.html#configuration
-redis.sessions.secret = output_of_shell_uuid_command
+redis.sessions.secret = sekrit
 redis.sessions.url = %(redis.url)s
 redis.sessions.timeout = 3600
 redis.sessions.prefix = occams-sessions:
@@ -54,11 +54,11 @@ redis.sessions.prefix = occams-sessions:
 
 ; OCCAMS applications/plug-ins (loaded after pyramid.includes)
 occams.apps =
-;  occams_datastore
-;  occams_accounts
-;  occams_forms
-;  occams_studies
-;  occams_roster
+  occams_datastore
+  occams_accounts
+  occams_forms
+  occams_studies
+  occams_roster
 ;  occams_lims
 
 ; Organization token (pirc, cctg, mhealth, etc.)
@@ -68,18 +68,18 @@ occams.org.name = myorg
 occams.org.title = My Organization
 
 ; SQLAlchemy URL to the primary application database
-occams.db.url =
+occams.db.url = postgresql://user:pass@/myorg
 
 ; Permissions group mappings (LDAP -> OCCAMS format)
 occams.groups =
-;     cohort-group = group
-;     cohort-site-group = site:group
+;     myorg-group = group
+;     myorg-site-group = site:group
 ;
 ; PID plugin module
 studies.pid.package = occams.roster
 
 ; PID SQLAlchemy URL
-roster.db.url = %(ROSTER_URL)s
+roster.db.url = postgresql://user:pass@/roster
 
 ; Directory where BLOB files will reside
 studies.blob.dir = %(here)s/../var/blobs/
@@ -114,7 +114,7 @@ studies.celery.backend.url = %(redis.url)s
 [alembic]
 script_location = occams_studies:alembic/
 blame = bitcore@ucsd.edu
-sqlalchemy.url =
+sqlalchemy.url = postgresql://user:pass@/myorg
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -150,7 +150,7 @@ use = egg:gunicorn#main
 ; Had to override gevent-socketio's to access gunicorn's crappy config system
 worker_class = occams.sgunicorn.GeventSocketIOWorker
 host = 0.0.0.0
-port = %(server_port)s
+port = 3000
 errorlog = -
 logconfig = %(here)s/development.ini
 loglevel = INFO
