--- a/development.ini
+++ b/development.ini
@@ -34,6 +34,7 @@ redis.url = redis://localhost:6379/0
 ; https://github.com/sontek/pyramid_webassets#configuration
 ; Debug mode (false = compress)
 webassets.debug = true
+webassets.auto_build = true
 
 ; Authentication
 ; http://docs.pylonsproject.org/projects/pyramid_who/en/latest/#configuration-options
