--- a/production.ini
+++ b/production.ini
@@ -32,6 +32,7 @@ redis.url = redis://localhost:6379/0
 ; https://github.com/sontek/pyramid_webassets#configuration
 ; Debug mode (false = compress)
 webassets.debug = false
+webassets.auto_build = false
 
 ; Authentication
 ; http://docs.pylonsproject.org/projects/pyramid_who/en/latest/#configuration-options
