--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,10 @@
 
 ### In-house
 
-# ---> UPDATE THESE <----
--e /PATH/TO/occams_datastore[test]
--e /PATH/TO/occams_accounts[test]
--e /PATH/TO/occams_forms[test]
--e /PATH/TO/occams_roster[test]
--e /PATH/TO/occams_studies[test]
--e /PATH/TO/occams_lims[test]
--e /PATH/TO/occams[test,ldap,gunicorn,postgresql]
+-e git+https://bitbucket.org/ucsdbitcore/occams_datastore@master#egg=occams_datastore[test]
+-e git+https://bitbucket.org/ucsdbitcore/occams_accounts@master#egg=occams_accounts[test]
+-e git+https://bitbucket.org/ucsdbitcore/occams_forms@master#egg=occams_forms[test]
+-e git+https://bitbucket.org/ucsdbitcore/occams_roster@master#egg=occams_roster[test]
+-e git+https://bitbucket.org/ucsdbitcore/occams_studies@master#egg=occams_studies[test]
+-e git+https://bitbucket.org/ucsdbitcore/occams_lims@master#egg=occams_lims[test]
+-e git+https://bitbucket.org/ucsdbitcore/occams@master#egg=occams[test,ldap,gunicorn,postgresql]
