Consolidated configurations and start building doc files

--- a/development.ini
+++ b/development.ini
@@ -1,10 +1,15 @@
 ;
 ; development.ini
+;
 ; Master OCCAMS configuration
+;
+; Assumed global variables:
+;   __file__: the current file
+;   here: the current directory of this config file
 ;
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; APPS CONFIGURATION
+; APP CONFIGURATION
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [app:main]
 use = egg:occams
@@ -23,35 +28,34 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-; By default, the toolbar only appears for clients from IP addresses
-; '127.0.0.1' and '::1'.
+; Debug toolbar settings
+; http://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/#settings
+; IP address filters for which users can see the debugtoolbar
 debugtoolbar.hosts = 127.0.0.1 ::1
 
 ; redis (for regular access)
 redis.url = redis://localhost:6379/0
 
-; webassets
+; Web Assets
 ; https://github.com/sontek/pyramid_webassets#configuration
-; Debug mode (false = compress)
 webassets.debug = true
 webassets.auto_build = true
 
 ; Authentication
 ; http://docs.pylonsproject.org/projects/pyramid_who/en/latest/#configuration-options
-who.config_file = %(here)s/who.ini
+who.config_file = %(__file__)s
 who.identifier_id = plugins:auth_tkt
 
 ; Browser sessions
-; Share redis server while avoiding collisions with a prefix
-; NOTE: Keep authorization and session secrets separate for security purposes
 ; http://pyramid-redis-sessions.readthedocs.org/en/latest/gettingstarted.html#configuration
-redis.sessions.secret = sekrit
+;; Share redis server while avoiding collisions with a prefix
 redis.sessions.url = %(redis.url)s
-redis.sessions.timeout = 3600
-redis.sessions.prefix = occams-sessions:
-
-; External application links JSON configuration file. (Optional)
-;suite.file = apps.json
+; NOTE: Keep authorization and session secrets separate for security purposes
+redis.sessions.secret = sekrit
+; Useful if multiple applications are using the same redis database
+redis.sessions.prefix = occams-session:
+; *WARNING* Also update repoze.who timeout with this value
+redis.sessions.timeout = 36000
 
 ; OCCAMS applications/plug-ins (loaded after pyramid.includes)
 occams.apps =
@@ -75,12 +79,6 @@ occams.db.url = postgresql://user:pass@/myorg
 occams.groups =
 ;     myorg-group = group
 ;     myorg-site-group = site:group
-;
-; PID plugin module
-studies.pid.package = occams.roster
-
-; PID SQLAlchemy URL
-roster.db.url = postgresql://user:pass@/roster
 
 ; Directory where BLOB files will reside
 studies.blob.dir = %(here)s/../var/blobs/
@@ -103,6 +101,11 @@ studies.celery.broker.url = %(redis.url)s
 ; Status of jobs will be stored here [REQUIRED]
 studies.celery.backend.url = %(redis.url)s
 
+; PID plugin module
+studies.pid.package = occams.roster
+
+; PID SQLAlchemy URL
+roster.db.url = postgresql://user:pass@/roster
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ALEMBIC SETTINGS
@@ -117,22 +120,104 @@ script_location = occams_studies:alembic/
 blame = bitcore@ucsd.edu
 sqlalchemy.url = postgresql://user:pass@/myorg
 
-
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; REPOZE WHO MIDDLEWARE
-; Common configurations for repoze.who, applications should use this as a
-; configuration filter (i.e. "filter-with = who")
+; https://repozewho.readthedocs.org/en/latest/configuration.html#declarative-configuration
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [filter:who]
 use = egg:repoze.who#config
-config_file = %(here)s/who.ini
+config_file = $(__file__)s
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; REPOZE WHO v2 PLUGIN/MIDDLEWARE CONFIGURATIONS
+;
+; This file is pre-configured for ldap, but you can use whatever v2 plugin.
+;
+; The LDAP plugin used is ``who_ldap``:
+; https://github.com/m-martinez/who_ldap
+;
+; More options at:
+; http://docs.repoze.org/who/2.0/configuration.html#declarative-configuration
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[general]
+request_classifier = repoze.who.classifiers:default_request_classifier
+challenge_decider = pyramid_who.classifiers:forbidden_challenger
+remote_user_key = REMOTE_USER
+
+[identifiers]
+plugins =
+  auth_tkt
+
+[authenticators]
+plugins =
+  auth_tkt
+  ldapusers
+
+[mdproviders]
+plugins =
+  ldapproperties
+  ldapgroups
+
+[challengers]
+plugins =
+  redirector;browser
+
+[plugin:redirector]
+use = repoze.who.plugins.redirector:make_plugin
+login_url = /accounts/login
+came_from_param = referrer
+
+[plugin:auth_tkt]
+; identification and authentication
+use = repoze.who.plugins.auth_tkt:make_plugin
+secret = AUTH_SPECIFIC_TOKEN
+cookie_name = auth_tkt
+; Switch to true on production systems
+secure = False
+include_ip = True
+; *WARNING* Use the same value as pyramid session timeout
+timeout = 3600
+; Rule of thumb, set to a tenth of the timetout (per pyramid docs)
+reissue_time = 360
+
+[plugin:ldapusers]
+; authentication
+use = who_ldap:LDAPSearchAuthenticatorPlugin
+url =
+bind_dn =
+bind_pass =
+base_dn =
+naming_attribute =
+search_scope = subtree
+returned_id = login
+
+[plugin:ldapproperties]
+; mdproviders
+use = who_ldap:LDAPAttributesPlugin
+url =
+bind_dn =
+bind_pass =
+name = properties
+attributes = cn=first_name,sn=last_name,mail=email
+flatten = True
+
+[plugin:ldapgroups]
+; mdproviders
+use = who_ldap:LDAPGroupsPlugin
+url =
+bind_dn =
+bind_pass =
+base_dn =
+name = groups
+filterstr = (&(objectClass=groupOfNames)(member=%%(dn)s))
+returned_id = cn
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;
 ; WSGI SERVER CONFIGURATION
 ;
 ; https://gevent-socketio.readthedocs.org/en/latest/server_integration.html#gunicorn
+; http://docs.gunicorn.org/en/latest/configure.html#configuration-file
 ;
 ; <rant>
 ; There is absolutely no way to specify custom settings in gunicorn. They must be
@@ -153,19 +238,18 @@ worker_class = occams.sgunicorn.GeventSocketIOWorker
 host = 0.0.0.0
 port = 3000
 errorlog = -
-logconfig = %(here)s/development.ini
+logconfig = %(__file__)ss
 loglevel = INFO
 ; Note, for resource DO NOT ADD beginning slash
 ; --env resource=studies/socket.io
 ; --env policy_server=False
-
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; LOGGING CONFIGURATION
 ; http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [loggers]
-keys = root, sqlalchemy, alembic, occams, occams_studies, occams_forms, occams_accounts, occams_lims
+keys = root, sqlalchemy, alembic, occams
 
 [handlers]
 keys = console
@@ -180,27 +264,7 @@ handlers = console
 [logger_occams]
 level = DEBUG
 handlers =
-qualname = occams_accounts
-
-[logger_occams_accounts]
-level = DEBUG
-handlers =
-qualname = occams_accounts
-
-[logger_occams_studies]
-level = DEBUG
-handlers =
-qualname = occams_studies
-
-[logger_occams_forms]
-level = DEBUG
-handlers =
-qualname = occams_forms
-
-[logger_occams_lims]
-level = DEBUG
-handlers =
-qualname = occams_lims
+qualname = occams
 
 [logger_alembic]
 level = INFO
