--- a/production.ini
+++ b/production.ini
@@ -1,6 +1,11 @@
 ;
 ; production.ini
+;
 ; Master OCCAMS configuration
+;
+; Assumed global variables:
+;   __file__: the current file
+;   here: the current directory of this config file
 ;
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -23,12 +28,14 @@ pyramid.default_locale_name = en
 pyramid.includes =
   pyramid_exclog
 
+; Pyramid exclogger settings
+; http://pyramid-exclog.readthedocs.org/en/latest/
 exclog.extra_info = true
 
 ; redis (for regular access)
 redis.url = redis://localhost:6379/0
 
-; webassets
+; Web Assets
 ; https://github.com/sontek/pyramid_webassets#configuration
 ; Debug mode (false = compress)
 webassets.debug = false
@@ -36,20 +43,19 @@ webassets.auto_build = false
 
 ; Authentication
 ; http://docs.pylonsproject.org/projects/pyramid_who/en/latest/#configuration-options
-who.config_file = %(here)s/who.ini
+who.config_file = %(__file__)s
 who.identifier_id = plugins:auth_tkt
 
 ; Browser sessions
-; Share redis server while avoiding collisions with a prefix
-; NOTE: Keep authorization and session secrets separate for security purposes
 ; http://pyramid-redis-sessions.readthedocs.org/en/latest/gettingstarted.html#configuration
-redis.sessions.secret = sekrit
+;; Share redis server while avoiding collisions with a prefix
 redis.sessions.url = %(redis.url)s
-redis.sessions.timeout = 3600
-redis.sessions.prefix = occams-sessions:
-
-; External application links JSON configuration file. (Optional)
-;suite.file = apps.json
+; NOTE: Keep authorization and session secrets separate for security purposes
+redis.sessions.secret = sekrit
+; Useful if multiple applications are using the same redis database
+redis.sessions.prefix = occams-session:
+; *WARNING* Also update repoze.who timeout with this value
+redis.sessions.timeout = 36000
 
 ; OCCAMS applications/plug-ins (loaded after pyramid.includes)
 occams.apps =
@@ -101,7 +107,6 @@ studies.celery.broker.url = %(redis.url)s
 ; Status of jobs will be stored here [REQUIRED]
 studies.celery.backend.url = %(redis.url)s
 
-
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ALEMBIC SETTINGS
 ;; It's useful to have the database migrations in a common file for reference.
@@ -115,22 +120,104 @@ script_location = occams_studies:alembic/
 blame = bitcore@ucsd.edu
 sqlalchemy.url = postgresql://user:pass@/myorg
 
-
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; REPOZE WHO MIDDLEWARE
-; Common configurations for repoze.who, applications should use this as a
-; configuration filter (i.e. "filter-with = who")
+; https://repozewho.readthedocs.org/en/latest/configuration.html#declarative-configuration
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [filter:who]
 use = egg:repoze.who#config
-config_file = %(here)s/who.ini
+config_file = %(__file__)s
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; REPOZE WHO v2 PLUGIN/MIDDLEWARE CONFIGURATIONS
+;
+; This file is pre-configured for ldap, but you can use whatever v2 plugin.
+;
+; The LDAP plugin used is ``who_ldap``:
+; https://github.com/m-martinez/who_ldap
+;
+; More options at:
+; http://docs.repoze.org/who/2.0/configuration.html#declarative-configuration
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[general]
+request_classifier = repoze.who.classifiers:default_request_classifier
+challenge_decider = pyramid_who.classifiers:forbidden_challenger
+remote_user_key = REMOTE_USER
+
+[identifiers]
+plugins =
+  auth_tkt
+
+[authenticators]
+plugins =
+  auth_tkt
+  ldapusers
+
+[mdproviders]
+plugins =
+  ldapproperties
+  ldapgroups
+
+[challengers]
+plugins =
+  redirector;browser
+
+[plugin:redirector]
+use = repoze.who.plugins.redirector:make_plugin
+login_url = /accounts/login
+came_from_param = referrer
+
+[plugin:auth_tkt]
+; identification and authentication
+use = repoze.who.plugins.auth_tkt:make_plugin
+secret = AUTH_SPECIFIC_TOKEN
+cookie_name = auth_tkt
+; Switch to true on production systems
+secure = False
+include_ip = True
+; *WARNING* Use the same value as pyramid session timeout
+timeout = 3600
+; Rule of thumb, set to a tenth of the timetout (per pyramid docs)
+reissue_time = 360
+
+[plugin:ldapusers]
+; authentication
+use = who_ldap:LDAPSearchAuthenticatorPlugin
+url =
+bind_dn =
+bind_pass =
+base_dn =
+naming_attribute =
+search_scope = subtree
+returned_id = login
+
+[plugin:ldapproperties]
+; mdproviders
+use = who_ldap:LDAPAttributesPlugin
+url =
+bind_dn =
+bind_pass =
+name = properties
+attributes = cn=first_name,sn=last_name,mail=email
+flatten = True
+
+[plugin:ldapgroups]
+; mdproviders
+use = who_ldap:LDAPGroupsPlugin
+url =
+bind_dn =
+bind_pass =
+base_dn =
+name = groups
+filterstr = (&(objectClass=groupOfNames)(member=%%(dn)s))
+returned_id = cn
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;
 ; WSGI SERVER CONFIGURATION
 ;
 ; https://gevent-socketio.readthedocs.org/en/latest/server_integration.html#gunicorn
+; http://docs.gunicorn.org/en/latest/configure.html#configuration-file
 ;
 ; <rant>
 ; There is absolutely no way to specify custom settings in gunicorn. They must be
@@ -151,19 +238,18 @@ worker_class = occams.sgunicorn.GeventSocketIOWorker
 host = 0.0.0.0
 port = 3000
 errorlog = -
-logconfig = %(here)s/production.ini
+logconfig = %(__file__)s
 loglevel = WARN
 ; Note, for resource DO NOT ADD beginning slash
 ; --env resource=studies/socket.io
 ; --env policy_server=False
-
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; LOGGING CONFIGURATION
 ; http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [loggers]
-keys = root, exc_logger, sqlalchemy, alembic, occams, occams_studies, occams_forms, occams_accounts, occams_lims
+keys = root, exc_logger, sqlalchemy, alembic, occams
 
 [handlers]
 keys = console, exc_handler
@@ -178,27 +264,7 @@ handlers = console
 [logger_occams]
 level = WARN
 handlers =
-qualname = occams_accounts
-
-[logger_occams_accounts]
-level = WARN
-handlers =
-qualname = occams_accounts
-
-[logger_occams_studies]
-level = WARN
-handlers =
-qualname = occams_studies
-
-[logger_occams_forms]
-level = WARN
-handlers =
-qualname = occams_forms
-
-[logger_occams_lims]
-level = WARN
-handlers =
-qualname = occams_lims
+qualname = occams
 
 [logger_alembic]
 level = INFO
