--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ Icon?
 .Trashes
 
 ##### Linux Files
-.*
 !.gitignore
 *~
 .directory
@@ -63,6 +62,12 @@ Session.vim
 *.egg
 *.egg-info*
 *PKG-INFO
+VERSION
+
+##### Node
+npm_modules
+node_modules
+bower_components
 
 ##### Buildout / Unit test / Coverage Reports
 .coverage
@@ -81,9 +86,12 @@ lib
 parts
 sdist
 var
-# Ignore custom development configurations
 develop.cfg
-VERSION
+res
+refs
+gen
+webassets-external
+.webassets-cache
 
 ##### Translations
 *.mo
