--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ Icon?
 .Trashes
 
 ##### Linux Files
-.*
 !.gitignore
 *~
 .directory
@@ -63,6 +62,12 @@ Session.vim
 *.egg
 *.egg-info*
 *PKG-INFO
+VERSION
+
+##### Node
+npm_modules
+node_modules
+bower_components
 
 ##### Buildout / Unit test / Coverage Reports
 .coverage
@@ -82,13 +87,11 @@ parts
 sdist
 var
 develop.cfg
-development.ini
-production.ini
 res
 refs
 gen
 webassets-external
-VERSION
+.webassets-cache
 
 ##### Translations
 *.mo
@@ -96,7 +99,3 @@ VERSION
 ##### Installer Logs
 pip-log.txt
 
-##### Node
-node_modules/
-bower_components/
-npm-debug.log
