--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ Icon?
 .Trashes
 
 ##### Linux Files
-.*
 !.gitignore
 *~
 .directory
@@ -88,19 +87,15 @@ parts
 sdist
 var
 develop.cfg
-development.ini
-production.ini
 res
 refs
 gen
 webassets-external
+.webassets-cache
 
 ##### Translations
 *.mo
 
 ##### Installer Logs
 pip-log.txt
-
-#### Redis dump file
-dump.rdb
 
