Switch to pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,9 @@ with-coverage=1
 cover-erase=1
 logging-level=DEBUG
 
+[pytest]
+addopts = --cov occams_studies --cov-report html --cov-report term
+
 [compile_catalog]
 directory = src/occams/studies/locale
 domain = occams_studies
