Switch to pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,5 @@
-[nosetests]
-match=^test
-nocapture=1
-cover-package=occams_forms
-with-coverage=1
-cover-erase=1
+[pytest]
+addopts = --cov occams_forms --cov-report html --cov-report term
 
 [compile_catalog]
 directory = occams_forms/locale
