--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,3 @@
-[nosetests]
-match=^test
-nocapture=1
-cover-package=occams_roster
-with-coverage=1
-cover-erase=1
-logging-level=DEBUG
+[pytest]
+addopts = --cov occams_roster --cov-report html --cov-report term
 
