--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,3 @@
-[nosetests]
-match=^test
-nocapture=1
-cover-package=occams_datastore
-with-coverage=1
-cover-erase=1
-logging-level=DEBUG
+[pytest]
+addopts = --cov occams_datastore --cov-report html --cov-report term
+
