--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,5 @@
-[nosetests]
-match=^test
-nocapture=1
-cover-package=occams_acounts
-with-coverage=1
-cover-erase=1
-logging-level=DEBUG
+[pytest]
+addopts = --cov occams_accounts --cov-report html --cov-report term
 
 [compile_catalog]
 directory = src/occams_acounts/locale
