--- a/sample.ini
+++ b/sample.ini
@@ -151,7 +151,7 @@ celery.include =
   occams_studies.tasks
 
 celery.beat =
-  make-coke-book-hourly
+  make-code-book-hourly
 
 celery.beat.make-codebook-hourly.task = make_codebook
 celery.beat.make-codebook-hourly.schedule = timedelta
@@ -279,7 +279,7 @@ plugins =
 
 [challengers]
 plugins =
-  redirector#browser
+  redirector;browser
 
 [plugin:redirector]
 use = repoze.who.plugins.redirector:make_plugin
