Use repoze.who handlers instead of pyramid

--- a/sample.ini
+++ b/sample.ini
@@ -260,7 +260,7 @@ config_file = %(__file__)s
 
 [general]
 request_classifier = repoze.who.classifiers:default_request_classifier
-challenge_decider = pyramid_who.classifiers:forbidden_challenger
+challenge_decider = repoze.who.classifiers:default_challenge_decider
 remote_user_key = REMOTE_USER
 
 [identifiers]
